--- a/backend/.env
+++ b/backend/.env
@@ -1,3 +1,3 @@
-RESTREVIEWS_DB_URI=mongodb+srv://maahir:mernstack@cluster0.jabsh.mongodb.net/sample_restaurants?retryWrites=true&w=majority
+RESTREVIEWS_DB_URI=mongodb+srv://maahir:<password>@cluster0.jabsh.mongodb.net/sample_restaurants?retryWrites=true&w=majority
 RESTREVIEWS_NS=sample_restaurants
 PORT=5000
